--- a/Prueba/src/main/resources/application.properties
+++ b/Prueba/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=Prueba
 
-# Configuración de la base de datos PostgreSQL
+# ConfiguraciÃ³n de la base de datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://dpg-csn1vkij1k6c73dqh860-a.oregon-postgres.render.com:5432/registro_alumnos
 spring.datasource.username=root
 spring.datasource.password=ZobUAmzepElgTFUt9BNID2PubxrdKeaC
 
 
-# Configuración adicional para PostgreSQL
+# ConfiguraciÃ³n adicional para PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+server.port=8080
